# agent-development-kit

./: .env.example  .gitignore  README.md  pyproject.toml
10_sequential_agent/: README.md
10_sequential_agent/lead_qualification_agent/: __init__.py  agent.py  callbacks.py
11_parallel_agent/system_monitor_agent/: __init__.py  agent.py
12_loop_agent/: README.md
12_loop_agent/linkedin_post_agent/: __init__.py  agent.py  constant.py
1_basic_agent/greeting_agent/: .env  README.md  adk_api_server.md  agent.py  raw_response.json
2_tool_agent/tool_agent/: agent.py
3_litellm_agent/joke_agent/: README.md  agent.py
4_structured_outputs/email_agent/: agent.py  json_text_email_converter.py
5_session_state/: basic_session_state.py
5_session_state/question_answer_agent/: __init__.py  agent.py
6_persistent_storage/: README.md  app_config.ini  config.py  main.py  my_agent_data.db  utils.py
6_persistent_storage/persistent_agent/: agent.py
6_persistent_storage_postgres/: app_config.ini  config.py
6_persistent_storage_sqlite/: main.py  utility.py
6_persistent_storage_sqlite/persistent_agent/: agent.py
7_multi_agent/: .env.example  README.md  test_weather_agent.py  test_weather_integration.py
7_multi_agent/manager/: agent.py
7_multi_agent/test/: conftest.py  test_weather_agent.py
8_stateful_multi_agent/: utils.py
9_callbacks/: README.md
multi_agent_config_system/: README.md  main.py
persistent_storage_postgres/: .env.example  README.md  main.py
stateful_multi_agent/: main.py  utils.py
utils/: adk_logger.py  logger.py  sample.py
(+87 files in other folders)
